--- a/Arc_Ai/Arc_Ai/core/static/styles/profilepage.css
+++ b/Arc_Ai/Arc_Ai/core/static/styles/profilepage.css
@@ -59,6 +59,9 @@
     font-weight: bold;
     color: #000000;
     max-width: 500px;
+    align-items: center;
+    align-content: center;
+    height: 200px;
 }
 
 #userInfo h2 {
@@ -74,6 +77,7 @@
     top: 100px;
     right: 100px;
     cursor: pointer;
+    margin-top: 20px;
 }
 
 #personalInfo {
