--- a/Arc_Ai/Arc_Ai/core/templates/core/admin_files_page.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/admin_files_page.html
@@ -86,7 +86,7 @@
         </div>
         <div class="icon-placeholder">
             <button class="icon-button dropdown-toggle" data-user-id="{{ user_data.user.id }}">
-                <i class="bx bx-caret-down"></i>
+                <img src="{% static 'Images/chevron-down.png' %}" alt="Dropdown" class="dropdown-icon">
             </button>
         </div>
 
